--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.18.0",
+    "i18next": "^22.4.13",
+    "i18next-http-backend": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^12.2.0",
     "react-icons": "^4.8.0",
+    "react-router-dom": "^6.9.0",
     "sass": "^1.58.3"
   },
   "devDependencies": {
